--- a/webextension/newTab.css
+++ b/webextension/newTab.css
@@ -283,7 +283,7 @@ input[type="button"] {
 	transition-property: opacity;
 }
 #newtab-grid[locked] {
-	pointer-events: none;
+	/*pointer-events: none;*/
 }
 /* ROWS */
 .newtab-row {
@@ -330,7 +330,7 @@ input[type="button"] {
 }
 .newtab-site[frozen] {
 	position: absolute;
-	pointer-events: none;
+	/*pointer-events: none;*/
 }
 .newtab-site[dragged] {
 	z-index: 10;
